[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/game/hud/inventory_hud.gd" type="Script" id=1]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/game/hud/inventory_slot.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.054902, 0.054902, 0.627451 )

[node name="Heading" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -140.0
margin_bottom = -101.0
custom_fonts/font = SubResource( 1 )
text = "Inventory"
align = 1
valign = 1
uppercase = true

[node name="InventorySlots" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -85.0
margin_right = 175.0
margin_bottom = 85.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="Slot1" type="ColorRect" parent="InventorySlots"]
editor/display_folded = true
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
inv_hover_color = Color( 0.745098, 0.745098, 0.745098, 0.901961 )
inv_normal_color = Color( 0.54902, 0.54902, 0.54902, 0.901961 )

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
stretch_mode = 4

[node name="Slot2" type="ColorRect" parent="InventorySlots"]
editor/display_folded = true
margin_left = 90.0
margin_right = 170.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
inv_hover_color = Color( 0.745098, 0.745098, 0.745098, 0.901961 )
inv_normal_color = Color( 0.54902, 0.54902, 0.54902, 0.901961 )

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
stretch_mode = 4

[node name="Slot3" type="ColorRect" parent="InventorySlots"]
editor/display_folded = true
margin_left = 180.0
margin_right = 260.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
inv_hover_color = Color( 0.745098, 0.745098, 0.745098, 0.901961 )
inv_normal_color = Color( 0.54902, 0.54902, 0.54902, 0.901961 )

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
stretch_mode = 4

[node name="Slot4" type="ColorRect" parent="InventorySlots"]
editor/display_folded = true
margin_left = 270.0
margin_right = 350.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
inv_hover_color = Color( 0.745098, 0.745098, 0.745098, 0.901961 )
inv_normal_color = Color( 0.54902, 0.54902, 0.54902, 0.901961 )

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
stretch_mode = 4

[node name="Slot5" type="ColorRect" parent="InventorySlots"]
editor/display_folded = true
margin_top = 90.0
margin_right = 80.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
inv_hover_color = Color( 0.745098, 0.745098, 0.745098, 0.901961 )
inv_normal_color = Color( 0.54902, 0.54902, 0.54902, 0.901961 )

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
stretch_mode = 4

[node name="Slot6" type="ColorRect" parent="InventorySlots"]
editor/display_folded = true
margin_left = 90.0
margin_top = 90.0
margin_right = 170.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
inv_hover_color = Color( 0.745098, 0.745098, 0.745098, 0.901961 )
inv_normal_color = Color( 0.54902, 0.54902, 0.54902, 0.901961 )

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
stretch_mode = 4

[node name="Slot7" type="ColorRect" parent="InventorySlots"]
editor/display_folded = true
margin_left = 180.0
margin_top = 90.0
margin_right = 260.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
inv_hover_color = Color( 0.745098, 0.745098, 0.745098, 0.901961 )
inv_normal_color = Color( 0.54902, 0.54902, 0.54902, 0.901961 )

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
stretch_mode = 4

[node name="Slot8" type="ColorRect" parent="InventorySlots"]
editor/display_folded = true
margin_left = 270.0
margin_top = 90.0
margin_right = 350.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
inv_hover_color = Color( 0.745098, 0.745098, 0.745098, 0.901961 )
inv_normal_color = Color( 0.54902, 0.54902, 0.54902, 0.901961 )

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot8"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
stretch_mode = 4

[node name="ItemName" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 110.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="ItemDescription" type="Label" parent="ItemName"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 27.5
margin_bottom = 45.5
custom_fonts/font = SubResource( 3 )
align = 1
[connection signal="gui_input" from="InventorySlots/Slot1" to="InventorySlots/Slot1" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot1" to="InventorySlots/Slot1" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot1" to="InventorySlots/Slot1" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot2" to="InventorySlots/Slot2" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot2" to="InventorySlots/Slot2" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot2" to="InventorySlots/Slot2" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot3" to="InventorySlots/Slot3" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot3" to="InventorySlots/Slot3" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot3" to="InventorySlots/Slot3" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot4" to="InventorySlots/Slot4" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot4" to="InventorySlots/Slot4" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot4" to="InventorySlots/Slot4" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot5" to="InventorySlots/Slot5" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot5" to="InventorySlots/Slot5" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot5" to="InventorySlots/Slot5" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot6" to="InventorySlots/Slot6" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot6" to="InventorySlots/Slot6" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot6" to="InventorySlots/Slot6" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot7" to="InventorySlots/Slot7" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot7" to="InventorySlots/Slot7" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot7" to="InventorySlots/Slot7" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot8" to="InventorySlots/Slot8" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot8" to="InventorySlots/Slot8" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot8" to="InventorySlots/Slot8" method="_on_Slot1_mouse_exited"]
